--- a/home.html
+++ b/home.html
@@ -51,7 +51,7 @@
     
     <center>
         <h1> Welcome to MEPCO SCHLENK ENGINEERING COLLEGE </h1>
-    <img src="images/MSEC.png" alt="MSEC Logo" width="150" height="200">
+    <img src="MSEC.png" alt="MSEC Logo" width="150" height="200">
     <p> Mepco Schlenk Engineering College, Sivakasi, is a reputed autonomous engineering institution in Tamil Nadu, established in 1984. Affiliated with Anna University and approved by AICTE, the college is known for its strong academic standards, disciplined environment, and quality technical education. It offers a wide range of undergraduate, postgraduate, and research programs, supported by good infrastructure, experienced faculty, and a green campus. The college also has a consistent placement record and focuses on overall student development through academics, research, and extracurricular activities.</p>    
 </center>
 <hr>
@@ -62,4 +62,5 @@
   <li><a href="contact.html"> Contact Us </a> </li>
 </ul> 
 </body>
+
 </html>
