Fix HTML formatting and add missing closing tags

--- a/index.html
+++ b/index.html
@@ -51,12 +51,13 @@
 
     <center>
         <h1> MEPCO SCHLENK ENGINEERING COLLEGE</h1>
-        <img src="images/Mepco.webp" alt="MSEC campus " width="400" height="200"> 
+        <img src="Mepco.webp" alt="MSEC campus " width="400" height="200"> 
     <hr>
-     <img src="images/princi.jpg" alt="MSEC Principal " width="150" height="100">
+     <img src="princi.jpg" alt="MSEC Principal " width="150" height="100">
         <p> Dr. S. Arivazhagan, the Principal of Mepco Schlenk Engineering College, Sivakasi, is an experienced academic leader known for his commitment to excellence in engineering education. Under his guidance, the college emphasizes quality teaching, research, innovation, and industry interaction. He plays a key role in maintaining academic standards, accreditation processes, and fostering a disciplined yet student-friendly learning environment. His leadership continues to support the institution’s vision of producing technically competent and socially responsible engineers. </p>
     <a href="home.html"> Home </a> | <a href="about.html"> About </a> | <a href="dept.html">Department </a> | <a href="contact.html">Contact Us </a>
     <h3> Thank you for visiting our website!</h3>
 </center>
 </body>
+
 </html>
