--- a/contact.html
+++ b/contact.html
@@ -51,7 +51,7 @@
         <hr>
     <center>
         <h1> MEPCO SCHLENK ENGINEERING COLLEGE </h1>
-        <img src="images/Mepco.webp" alt="MSEC campus " width="200" height="100">
+        <img src="Mepco.webp" alt="MSEC campus " width="200" height="100">
         <h1>Contact Us</h1>
         <p>For any queries or assistance, feel free to reach out to us:</p>
         <p>
@@ -71,4 +71,5 @@
   <li><a href="dept.html"> Departments </a> </li>
 </ul> 
 </body>
+
 </html>
